# XJTU-RMV-Task03

./: .gitignore  CMakeLists.txt  main.cpp
include/: windmill.hpp
src/: windmill.cpp
